--- a/css/style.css
+++ b/css/style.css
@@ -339,7 +339,7 @@ footer ul{
         @media (max-width: 480px) {
             html, body{
                 max-width: 100%;
-                overflow-x: hidden;
+               
             }
             header .blue{
                 display: block;
@@ -370,10 +370,94 @@ footer ul{
                 font-size: 20px;
             }
             .contenedor p{
-                font-size: 10px;
+                font-size: 15px;
             }
             .contenedor img{
                 width: 30px;
             }
-        
+            .port{
+                width: 100%;
+                flex-direction: column;
+            }
+
+            .port ul {
+                display: flex;
+                justify-content: center;
+                gap: 10px;
+                padding-left: 0%;
+            }
+            .imagenes{
+                display: flex;
+                justify-content: center;
+                flex-wrap: wrap;
+                gap: 15px;
+                padding-bottom: 50px;
+            }
+            .imagenes img{
+                width: 45%;
+            }
+            .textVideo{
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                gap: 20px;
+            }
+            .text1{
+                font-size: 15px;
+            }
+            .video{
+                text-align: center;
+            }
+            .video img{
+                width: 80%;
+            }
+            .twitter{
+               display: flex;
+                flex-direction: column;
+            }
+            .textoTwitter{
+                font-size: 15px;
+            }
+            .fondo{
+                display: flex;
+                height: auto;
+                background-repeat:no-repeat ;
+                background-size: cover;
+                background-position: center;
+            }
+            .john p{
+                font-size: 15px;
+            }
+            .icono12 img{
+                width: 20%;
+            }
+            .testimonials{
+                display: flex;
+                justify-content: space-between;
+                flex-direction: column;
+             }
+             .textoTesti{
+                 font-size: 15px;
+             }
+             .contact{
+                background-image: url(../images/bg_contact.png);
+                display: flex;
+                flex-direction: column;
+                padding: 8px;
+             }
+             .contact h2{
+                display: flex;
+                text-align: left;
+                width: 100%;
+             }
+             footer{
+                background-color:#353F47;
+                display: flex;
+                flex-direction: column;
+                height: auto;
+            }
+            footer ul{
+                display: flex;
+                font-size: 15px;
+            }
         }
