--- a/css/style.css
+++ b/css/style.css
@@ -578,9 +578,10 @@ footer ul{
             }
         }
         @media (min-width: 768px) and (max-width: 1024px){
-
-
-
+            html, body{
+                max-width: 100%;
+                overflow-x: hidden;
+            }
             .iconos{
                 display: flex;
                 align-items: center;
